# Sign-Language-Recognition

./: .gitattributes  .gitignore  README.md  notebook di prova.ipynb  pyproject.toml  requirements.txt
TSSI_CSRL/: config.py  data_loader.py  model.py  runner.ipynb  train.py  utils.py
_archive/: README.md
_archive/legacy_distillation_notebooks/: run_distill.ipynb  run_optuna.ipynb
code/csrl_skeleton/: config.py  dataset.py  extract_wholebody_133.py  losses.py  model.py  optuna_csrl_progress.json  optuna_search.py  output  prepare_phoenix_133.py  prepare_phoenix_mediapipe.py  runner.ipynb  runner_133.ipynb  skeleton.py  skeleton_coco133.py  skeleton_mediapipe75.py  train_teacher.py  training.py  tssi75_cslr.ipynb  vocab.py
code/distillation/: active_fd_cmkd.yaml  distill.py  distill_trainer.py  extract_skeleton_feats.py  extract_transformer_feats.py  fd_cmkd.py  fd_cmkd_trainer.py  from_scratch_fd_cmkd.yaml  reverse_distill.py  rkd_warm_fd_cmkd.yaml  run_feature_distill.ipynb  run_forward_scratch_distill.ipynb  run_forward_warm_distill.ipynb  run_reverse_scratch_distill.ipynb  run_reverse_warm_distill.ipynb  sign_distill.yaml  vocab_utils.py
code/distillation/experiments/: README.md
code/distillation/future_works/: run_forward_scratch_CONTROL.ipynb  run_forward_warm_CONTROL.ipynb  run_forward_warm_plainMSE.ipynb
code/distillation/optuna_fd_3nwnzdxy/: validations.txt
code/distillation/optuna_fd_89hb0wi4/: validations.txt
code/distillation/optuna_fd__6hvdsfa/: validations.txt
code/distillation/optuna_fd_ck4go_h9/: validations.txt
code/distillation/optuna_fd_d6sigxvt/: validations.txt
code/distillation/optuna_fd_i5zcb38z/: validations.txt
code/distillation/optuna_fd_k5htbq12/: validations.txt
code/distillation/optuna_fd_l2ofs7w0/: validations.txt
code/distillation/optuna_fd_r0onholn/: validations.txt
code/distillation/optuna_fd_tpoq1_xi/: validations.txt
code/distillation/optuna_fd_vtsj79t5/: validations.txt
code/distillation/optuna_fd_wmv5c_c_/: validations.txt
code/distillation/optuna_fd_z2yepyd4/: validations.txt
code/signformer/: SETUP_PHOENIX.md  SIGNFORMER_UPSTREAM_README.md  config.py  prepare_phoenix_i3d.py  run_signformer_old.ipynb  runner.ipynb
code/signformer/configs/: sign.yaml  sign_AdamW.yaml
code/signformer/experiment_results/: results.md
code/signformer/main/: builders.py  data.py  dataset.py  helpers.py  metrics.py  prediction.py  training.py  vocabulary.py
code/signformer/optuna_trial_0i50y3xc/: validations.txt
code/signformer/optuna_trial_1pgz6ur8/: validations.txt
code/signformer/optuna_trial_1phcmtzn/: validations.txt
code/signformer/optuna_trial_44bryka1/: validations.txt
code/signformer/optuna_trial_49165e34/: validations.txt
code/signformer/optuna_trial_84t7nxpi/: validations.txt
code/signformer/optuna_trial_8l14oet_/: validations.txt
code/signformer/optuna_trial_aoa_8k93/: validations.txt
code/signformer/optuna_trial_ater4p9t/: validations.txt
code/signformer/optuna_trial_dwwyklzm/: validations.txt
code/signformer/optuna_trial_e8ilpfq1/: validations.txt
code/signformer/optuna_trial_h3oc4w3q/: validations.txt
code/signformer/optuna_trial_mm3910vl/: validations.txt
code/signformer/optuna_trial_mrwxyhqc/: validations.txt
code/signformer/optuna_trial_q1xpflnj/: validations.txt
code/signformer/optuna_trial_qc5zcxay/: validations.txt
code/signformer/optuna_trial_vgoi9y22/: validations.txt
code/signformer/optuna_trial_zghp59ys/: validations.txt
code/signformer/sign_sample/: test_output.BW_006.dev.gls  test_output.BW_006.test.gls  validations.txt
csrl/: augmentation.py  config.py  dataset.py  decoding.py  ensemble.py  losses.py  main.ipynb  metrics.py  model.py  optuna_search.py  skeleton.py  training.py  utils.py  vocabulary.py
dataset/: DATA.md
distillation/optuna/ctrl_0/: validations.txt
distillation/optuna/ctrl_1/: validations.txt
distillation/optuna/ctrl_2/: validations.txt
distillation/optuna/ctrl_3/: validations.txt
distillation/optuna/ctrl_4/: validations.txt
distillation/optuna/ctrl_5/: validations.txt
distillation/optuna/dist_0/: validations.txt
distillation/optuna/dist_1/: validations.txt
distillation/optuna/dist_10/: validations.txt
distillation/optuna/dist_11/: validations.txt
distillation/optuna/dist_12/: validations.txt
distillation/optuna/dist_13/: validations.txt
distillation/optuna/dist_14/: validations.txt
distillation/optuna/dist_2/: validations.txt
distillation/optuna/dist_3/: validations.txt
phoenix_project/: config.py  runner.ipynb
tests/: smoke_test.py
(+53 files in other folders)
