[project]
name = "edoar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "alembic==1.18.4",
    "asttokens==3.0.1",
    "colorlog==6.10.1",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "filelock==3.25.2",
    "fonttools==4.62.1",
    "fsspec==2026.2.0",
    "greenlet==3.5.0",
    "ipykernel==7.2.0",
    "ipython==8.39.0",
    "jedi==0.20.0",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jupyter>=1.1.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "mako==1.3.12",
    "markupsafe==3.0.3",
    "matplotlib==3.10.9",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "opencv-python-headless==4.13.0.92",
    "optuna==4.8.0",
    "packaging==26.2",
    "pandas==2.3.3",
    "parso==0.8.7",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.6",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "six==1.17.0",
    "sqlalchemy==2.0.49",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "threadpoolctl==3.6.0",
    "tomli==2.4.1",
    "torchvision>=0.21.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.15.0",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "wcwidth==0.7.0",
]
[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

[[tool.uv.index]]
url = "https://pypi.org/simple"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
