[project]
name = "sign-language-recognition"
version = "0.1.0"
description = "Cross-modal knowledge distillation for continuous sign language recognition on RWTH-PHOENIX-Weather 2014T"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # Both branches of the pipeline.
    "torch==2.6.0",
    "torchvision==0.21.0",

    # main/model.py calls tf.nn.ctc_beam_search_decoder for CTC beam search, and
    # hides the GPU from TensorFlow at import time (model.py, line 4), so
    # TensorFlow only ever runs on the CPU here. "tensorflow-cpu" is a drop-in
    # replacement and a far smaller download.
    #
    # The version matters. TensorFlow 2.13, which the original environment used,
    # caps typing-extensions below 4.6 while torch 2.6 requires 4.10 or newer:
    # the two cannot be installed together by a resolver that honours metadata.
    # 2.14 lifted the cap; 2.18 is the first release built against numpy 2.
    "tensorflow>=2.18,<2.19",

    # TensorFlow pulls this in on Python < 3.12, and its releases after 0.31.0
    # ship no Windows wheels. Without this bound the project cannot be installed
    # on Windows with Python 3.10 or 3.11.
    "tensorflow-io-gcs-filesystem<=0.31.0 ; sys_platform == 'win32' and python_full_version < '3.12'",

    # numpy 2 is what the released fd_cmkd checkpoint was serialised under, so it
    # loads directly. Under numpy 1.x it needs the renaming unpickler described in
    # dataset/DATA.md.
    "numpy>=2.0,<2.1",

    "scipy>=1.15,<2",
    "pandas>=2.2,<3",
    "pyyaml>=6.0",
    "optuna>=4.0,<5",
    "matplotlib>=3.8,<4",
    "tqdm>=4.66",

    # The notebooks are the entry points.
    "ipykernel>=6.29",
    "jupyter>=1.1.1",
]

[project.optional-dependencies]
# The baseline and the distillation runs were trained with SophiaG. Without this
# extra, main/builders.py falls back to Adam and the published numbers will not
# reproduce. The upstream package ships a broken __init__.py; the README gives the
# one-line fix needed after installing it.
sophia = ["sophia-opt"]

# main/external_metrics/sacrebleu.py falls back to a bundled BLEU implementation
# when sacrebleu is absent. Only the translation metrics depend on it, and this
# work reports recognition only.
metrics = ["sacrebleu>=2.4"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchvision = [{ index = "pytorch-cu124" }]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=6.29",
]
